vlib/v/checker/tests/globals/assign_global_to_shared_err.out
vlib/v/checker/tests/globals/assign_global_to_shared_err.vv:5:9: warning: unused variable: `b`
    3 | 
    4 | fn main() {
    5 |     shared b := a
      |            ^
    6 | }
vlib/v/checker/tests/globals/assign_global_to_shared_err.vv:5:14: error: cannot assign global variable to shared variable
    3 | 
    4 | fn main() {
    5 |     shared b := a
      |                 ^
    6 | }
vlib/v/checker/tests/globals/assign_global_to_shared_err.vv:5:14: error: cannot copy map: call `move` or `clone` method (or use a reference)
    3 | 
    4 | fn main() {
    5 |     shared b := a
      |                 ^
    6 | }
