vlib/v/checker/tests/globals/assign_global_to_shared_err.vv
@[has_globals]
__global a = {1: 'one', 2: 'two'}

fn main() {
	shared b := a
}
